# AutoFlash

./: .gitignore  README.md  pyproject.toml
flash_card_project/: app.py  mongodb_connect.py  restful_app.py
flash_card_project/static/: app.js  global-style.css  index.html  main.css  style.css
flash_card_project/static/edit_deck/: edit_deck.html  edit_deck.js
flash_card_project/static/study/: study-style.css  study.html  study.js  style.css
flashcard_generator/: Makefile  pyproject.toml
flashcard_generator/flashcard_generator/: app.py  fill_in_the_blank.py  get_hyperlinks.py  glossary.py  moderation.py  sentence_retrieval_wiki.py  wiki_hyperlink_generator.py  wikipedia_generator.py
flashcard_generator/static/: app.js  global-style.css  index.html
