[tool.poetry]
name = "flash_card_project"
version = "0.1.0"
description = ""
authors = ["colton <cflowers.flowers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
bottle = "^0.12.19"
pymongo = "^4.6.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
